# lanchatapp

./: CMakeLists.txt  LICENSE  README.md  gitignore
scripts/: build.bat  build.sh  run.sh
src/: main.cpp
src/http/: http_server.cpp  http_server.hpp
src/message/: message.cpp  message.hpp  message_handler.cpp  message_handler.hpp
src/network/: peer_discovery.cpp  peer_discovery.hpp  sockets.cpp  sockets.hpp
src/util/: json.hpp  utils.cpp  utils.hpp
web/: app.js  index.html  style.css
